# ave

./: .gitignore  Cargo.toml  README.md  test.sh
.cargo/: config.toml
bridge/: Cargo.toml  README.md
bridge/src/: config.rs  conversions.rs  error.rs  lib.rs  utils.rs
bridge/src/auth/: mod.rs
bridge/src/http/: mod.rs
bridge/src/model/: mod.rs  signature.rs
bridge/src/prometheus/: mod.rs
bridge/src/settings/: command.rs  mod.rs  params.rs
common/: Cargo.toml  README.md
common/src/: error.rs  governance.rs  lib.rs  namespace.rs  request.rs  response.rs  schematype.rs  signature.rs  sink.rs  wrapper.rs
common/src/bridge/: conversions.rs  mod.rs  request.rs  response.rs  signature.rs
common/ts/: .gitignore  README.md  check-published.sh  generate.sh  package.json  tsconfig.json
core/: Cargo.toml  README.md
core/migrations/: 001_initial_schema.sql
core/src/: config.rs  db.rs  error.rs  lib.rs  metrics.rs  system.rs
core/src/approval/: approver.rs  light.rs  mod.rs  persist.rs  request.rs  response.rs  types.rs
core/src/auth/: mod.rs
core/src/distribution/: coordinator.rs  distributor.rs  error.rs  mod.rs  worker.rs
core/src/evaluation/: coordinator.rs  evaluator.rs  mod.rs  request.rs  response.rs  schema.rs  worker.rs
core/src/evaluation/compiler/: contract_Cargo.toml  contract_compiler.rs  contract_register.rs  contract_stub.rs  error.rs  mod.rs  temp_compiler.rs
core/src/evaluation/runner/: error.rs  mod.rs  types.rs
core/src/external_db/: mod.rs
core/src/governance/: contract_register.rs  data.rs  error.rs  events.rs  mod.rs  model.rs  relationship.rs  role_register.rs  roles_register.rs  sn_register.rs  subject_register.rs  tracker_sync.rs  transfer_hint_register.rs  version_sync.rs  witnesses_register.rs
core/src/helpers/: mod.rs
core/src/helpers/db/: common.rs  error.rs  mod.rs  sqlite.rs
core/src/helpers/network/: error.rs  intermediary.rs  mod.rs  service.rs
core/src/helpers/sink/: error.rs  mod.rs
core/src/manual_distribution/: mod.rs
core/src/model/: common.rs  error.rs  event.rs  mod.rs  network.rs  request.rs  wrapper.rs
core/src/model/common/: contract.rs  distribution_plan.rs  mod.rs  node.rs  subject.rs  viewpoints.rs
core/src/node/: mod.rs  nodekey.rs  register.rs  relationship.rs  subject_manager.rs  transfer.rs
core/src/query/: mod.rs
core/src/request/: error.rs  manager.rs  mod.rs  reboot.rs  tracking.rs  types.rs
core/src/subject/: error.rs  event.rs  laststate.rs  mod.rs  sinkdata.rs  validata.rs
core/src/system/: error.rs  mod.rs
core/src/tracker/: mod.rs
core/src/update/: mod.rs  updater.rs
core/src/validation/: coordinator.rs  mod.rs  proof.rs  request.rs  response.rs  schema.rs  validator.rs  worker.rs
core/tests/: copy.rs  gov.rs  subject.rs  tracker.rs  updown.rs  viewpoint.rs  viewpoints.rs  viewpoints_auth.rs  viewpoints_basic.rs  viewpoints_copy.rs  viewpoints_isolation.rs  viewpoints_ownership.rs  viewpoints_update.rs  witness.rs  witness_basic.rs
core/tests/common/: mod.rs
docs/: network-ephemeral-dial-retry-changes.md
http/: Cargo.toml  README.md  auth_config.example.toml
http/docker/: Dockerfile.rocksdb  Dockerfile.sqlite  build.sh
http/migrations/: 001_initial_schema.sql  002_role_permissions.sql  003_usage_plans.sql
http/src/: config_types.rs  enviroment.rs  error.rs  lib.rs  logging.rs  main.rs  middleware.rs  self_signed_cert.rs  server.rs  startup.rs  wrappers.rs
http/src/auth/: admin_handlers.rs  apikey_handlers.rs  config.rs  crypto.rs  database.rs  database_apikeys.rs  database_audit.rs  database_ext.rs  database_quota.rs  db_runtime.rs  handlers.rs  http_api.rs  integration.rs  login_handler.rs  metrics.rs  middleware.rs  mod.rs  models.rs  request_meta.rs  store.rs  system_config.rs  system_handlers.rs  token.rs
http/src/doc/: mod.rs
http/tests/: bridge_info_tests.rs  common.rs  crypto_tests.rs  database_tests.rs  http_endpoints.rs  real_http_endpoints_tests.rs  role_tests.rs  safe_mode_tests.rs  security_tests.rs
http/tests/common/: mod.rs
identity/: Cargo.toml  README.md
identity/examples/: basic_usage.rs
identity/src/: common.rs  error.rs  hash.rs  lib.rs  signature.rs  timestamp.rs
identity/src/keys/: ed25519.rs  keypair.rs  mod.rs  public_key.rs  signature_identifier.rs
identity/tests/: integration_test.rs
network/: Cargo.toml  README.md
network/src/: behaviour.rs  control_list.rs  error.rs  lib.rs  metrics.rs  monitor.rs  routing.rs  service.rs  transport.rs  utils.rs  worker.rs
protocols/tell/: Cargo.toml
protocols/tell/src/: cache.rs  handler.rs  lib.rs  protocol.rs
protocols/tell/src/codec/: binary.rs
protocols/tell/tests/: failures.rs
src/: lib.rs
