[workspace]
members = [
    "identity",
    "core",
    "bridge",
    "network",
    "http",
    "common"
]

resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Averiun Ledger, SL <info@averiun.com>"]
description = "Averiun Ledger library"
readme = "README.md"
homepage = "https://averiun.com"
repository = "https://github.com/Averiun-Ledger/ave"
license = "AGPL-3.0-only"
keywords = ["traceability", "distributed-ledger", "Averiun", "sustainability"]
rust-version = "1.91.0"

[workspace.dependencies]
ave-identity = { path = "identity", version = "0.2.0" }
ave-common = { path = "common" }
pkcs8 = { version = "0.10.2" }
axum = { version = "0.8.8" }
utoipa = { version = "5.4.0" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
async-trait = "0.1.89"
bs58 = "0.5.1"
base64 = "0.22.1"
blake3 = "1.8.3"
borsh = { version = "1.6.0", features = ["std", "derive"] }
ed25519-dalek = { version = "2", features = ["alloc", "pkcs8"] }
either = "1.15.0"
fnv = "1.0"
futures = "0.3.32"
futures-timer = "3.0"
prometheus-client = "0.23.1"
generic-array = "1.3.5"
getrandom = "0.4.2"
ip_network = "0.4"
k256 = { version = "0.13.4", features = ["ecdsa-core"] }
lazy_static = "1.5.0"
bytes = { version = "1.11.1", features = ["serde"] }
libp2p = { version = "0.56.0", default-features = false}
libp2p-swarm-test = { version = "0.6.0" }
memsecurity = { version = "3.5.2", features = ["encryption"] }
metrics = "0.24.3"
once_cell = "1.21.3"
rand = "0.10.0"
rmp-serde = "1.3"
serial_test = "3.3.1"
sha2 = "0.10.9"
sha3 = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.15.1"
tempfile = "3.26.0"
time = "0.3.47"
thiserror = "2.0.18"
tokio = { version = "1.50.0" }
tokio-util = { version = "0.7.18" }
tracing ={ version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
file-rotate = "0.8"
test-log = {version = "0.2.19", features = ["trace"] }
ave-actors = { path = "../ave-actors", default-features = false }
reqwest = { version = "0.13.2", features = ["json"] }
config = { version = "0.15.19", features = ["json", "toml", "yaml"]}
zeroize = "1.8"
subtle = "2.6"
lru = "0.16.3"
