[package]
name = "ave-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
ave_core = { package = "ave-core", path = "../core", default-features = false}
network = { package = "ave-network", path = "../network" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "signal", "process"] }
tokio-util = { workspace = true }
ave-common = { workspace = true }
pkcs8 = { workspace = true, features = ["encryption"] }
config = { workspace = true }
clap = { version = "4.5.60", features = ["derive"] }
tracing = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ave-actors = { workspace = true, features = ["sqlite"] }

[features]
default = ["sqlite", "ext-sqlite"]
rocksdb = ["ave_core/rocksdb"]
sqlite = ["ave_core/sqlite"]
ext-sqlite = ["ave_core/ext-sqlite"]
openapi = ["ave-common/openapi"]
test = ["network/test", "ave_core/test"]
