[package]
name = "ave-bridge"
version = "0.9.0"
edition.workspace = true
authors.workspace = true
description = "Application bridge for embedding and configuring the Ave runtime"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
ave_core = { package = "ave-core", path = "../core", default-features = false }
network = { package = "ave-network", path = "../network", version = "0.9.0" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "signal", "process"] }
prometheus-client = { workspace = true}
tokio-util = { workspace = true }
ave-common = { workspace = true }
pkcs8 = { workspace = true, features = ["encryption"] }
config = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
tracing = { workspace = true }
getrandom = { workspace = true }
axum = { workspace = true , optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["prometheus", "sqlite", "ext-sqlite"]
rocksdb = ["ave_core/rocksdb"]
sqlite = ["ave_core/sqlite"]
ext-sqlite = ["ave_core/ext-sqlite"]
prometheus = ["axum"]
openapi = ["ave-common/openapi"]
test = ["network/test", "ave_core/test"]
