[package]
name = "ave-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Averiun Ledger common library"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
ave-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
utoipa = { version = "5.4.0", optional = true }

[features]
default = []
openapi = ["utoipa"]
