[package]
name = "ave-common"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
description = "Averiun Ledger common library"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
ave-identity = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
utoipa = { workspace = true, optional = true }
ts-rs = { version = "12", features = ["serde-compat", "serde-json-impl"], optional = true}

[dev-dependencies]
ave-common = { package = "ave-common", path = ".", features = ["typescript"]}

[features]
default = ["common"]
common = ["ave-identity", "value-wrapper"]
value-wrapper = []
openapi = ["utoipa"]
typescript = ["ts-rs"]
