[package]
name = "ave-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
generic-array = {version = "1.3.5", features = ["zeroize"] }
ave-common = { path = "../common"}
json-patch = { version = "4.1.0" }
lazy_static = { workspace = true }
memsecurity = { version = "3.5.2", features = ["encryption"]}
ave-actors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "fs"] }
tracing = { workspace = true }
network = { package = "ave-network", path = "../network" }
rmp-serde = { workspace = true }
wasmtime = {version = "39.0.1"}
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true}
once_cell = { workspace = true }
base64 = { workspace = true }
prometheus-client = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
test-log = { workspace = true } 
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { version = "0.8.1", features = ["async_tokio"]}
tokio = { workspace = true, features = ["full"] }
futures ={ version = "0.3.31"}
network = { package = "ave-network", path = "../network", features = ["test"]}

[features]
default = ["sqlite", "ext-sqlite"]
rocksdb = ["ave-actors/rocksdb"]
sqlite = ["ave-actors/sqlite"]
ext-sqlite = ["rusqlite"]
