[package]
name = "ave-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
ave-common = { workspace = true }
json-patch = { version = "4.1.0" }
ave-actors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["std", "formatting", "parsing"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "fs", "process"] }
tracing = { workspace = true }
network = { package = "ave-network", path = "../network" }
rmp-serde = { workspace = true }
wasmtime = {version = "42.0.1"}
rusqlite = { workspace = true, optional = true }
base64 = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
network = { package = "ave-network", path = "../network", features = ["test"]}
ave-core = { path = ".", features = ["test"], default-features = false}
futures = { workspace = true }

[features]
default = ["sqlite", "ext-sqlite"]
rocksdb = ["ave-actors/rocksdb"]
sqlite = ["ave-actors/sqlite"]
ext-sqlite = ["rusqlite"]
test = []
