[package]
name = "ave-core"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
description = "Averiun Ledger core runtime and node API"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
ave-common = { workspace = true }
json-patch = { version = "4.1.0" }
ave-actors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["std", "formatting", "parsing"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "fs", "process"] }
tracing = { workspace = true }
ave-network = { workspace = true }
rmp-serde = { workspace = true }
wasmtime = {version = "44.0.0"}
base64 = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
lru = { workspace = true }
prometheus-client = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
ave-network = { workspace = true, features = ["test"] }
futures = { workspace = true }
axum = { workspace = true }

[features]
default = ["sqlite", "ext-sqlite"]
rocksdb = ["ave-actors/rocksdb"]
sqlite = ["ave-actors/sqlite"]
ext-sqlite = ["ave-actors/export-sqlite"]
test = []
