[package]
name = "ave-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
ave-bridge = { path = "../bridge", default-features = false, features = ["openapi"] }

tokio = {  workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
file-rotate = {  workspace = true }

getrandom = { workspace = true }
async-trait = "0.1.89"

futures = { version = "0.3.31", default-features = false }

reqwest = { version = "0.12.24"}
rustls = { version = "0.23.35", features = ["ring"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
axum = { version = "0.8.7" }
axum-extra = "0.12.1"
tower = "0.5.2"
tower-http = {version = "0.6.7", features = ["trace", "metrics", "cors"]}
utoipa = { version = "5.4.0", features = ["axum_extras"]}
utoipa-rapidoc = { version = "6.0.0", features = ["axum"]}
bytes = "1.11.0"

# Auth system dependencies
rusqlite = { version = "0.37.0", features = ["bundled", "time"] }
argon2 = { version = "0.5.3", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
time = "0.3.36"
thiserror = "2.0.9"
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = ["prometheus", "sqlite", "ext-sqlite"]
rocksdb = ["ave-bridge/rocksdb"]
sqlite = ["ave-bridge/sqlite"]
ext-sqlite = ["ave-bridge/ext-sqlite"]
prometheus = ["ave-bridge/prometheus"]
