[package]
name = "ave-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
ave-bridge = { path = "../bridge", default-features = false, features = ["openapi"] }

tokio = {  workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
file-rotate = {  workspace = true }

futures = { version = "0.3.32", default-features = false }

reqwest = {  workspace = true }
rustls = { version = "0.23.36", features = ["ring"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum = { workspace = true }
axum-extra = "0.12.5"
serde_qs = { version = "1.0", features = ["axum"] }
tower = "0.5.3"
tower-http = {version = "0.6.8", features = ["trace", "metrics", "cors", "set-header"]}
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"]}

# Auth system dependencies
rusqlite = { workspace = true, features = ["time"] }
argon2 = { version = "0.5.3", features = ["std"] }
sha2 = { workspace = true }
hex = "0.4.3"
rand = { workspace = true } 
time = { workspace = true }
thiserror = { workspace = true } 

# Self-signed certificate generation
rcgen = "0.14"
x509-parser = "0.18"

[dev-dependencies]
test-log = { workspace = true } 
tempfile = { workspace = true }
chrono = "0.4"
ave-bridge = { path = "../bridge", default-features = false, features = ["openapi", "test"] }

[features]
default = ["sqlite", "ext-sqlite"]
rocksdb = ["ave-bridge/rocksdb"]
sqlite = ["ave-bridge/sqlite"]
ext-sqlite = ["ave-bridge/ext-sqlite"]
