[package]
name = "ave-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Generic cryptographic primitives with algorithm identification"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
borsh = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
memsecurity = { workspace = true, features = ["encryption"] }
pkcs8 = { version = "0.10.2" }
serde = { workspace = true, features = ["derive"] }
subtle = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
bench = false
