[package]
name = "ave-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
borsh = { workspace = true }
reqwest = { workspace = true }
test-log = { workspace = true } 
bs58 = { workspace = true }
either = { workspace = true }
fnv = { workspace = true } 
futures = { workspace = true }
futures-timer = { workspace = true }
ave-common = { path = "../common" }
ip_network = { workspace = true }
libp2p = { workspace = true, default_features = false, features = [
	"identify",
	"kad",
	"noise",
	"yamux",
	"macros",
	"tcp",
	"tokio",
	"dns",
	"metrics",
	"request-response",
	"cbor",
	"secp256k1",
] }
metrics = { workspace = true }
prometheus-client = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tell = { package = "ave-tell", path = "../protocols/tell", default-features = false, features = [
	"binary",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
ave-actors = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
libp2p = { workspace = true, default_features = false, features = [
	"plaintext"
] }
libp2p-swarm-test = { workspace = true }
network = { package = "ave-network", path = ".", features = ["test"]}
rand = { workspace = true }
tracing-subscriber = { workspace = true }
serial_test = { workspace = true }

[features]
test =[]

[lib]
bench = false