[package]
name = "ave-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
borsh = { workspace = true }
reqwest = { workspace = true }
bs58 = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
ave-common = { workspace = true }
ip_network = { workspace = true }
libp2p = { workspace = true, default_features = false, features = [
	"identify",
	"kad",
	"noise",
	"yamux",
	"macros",
	"tcp",
	"tokio",
	"dns",
	"request-response",
	"cbor",
	"memory-connection-limits"
] }
metrics = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tell = { package = "ave-tell", path = "../protocols/tell", default-features = false, features = [
	"binary",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
ave-actors = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
test-log = { workspace = true } 
libp2p = { workspace = true, default_features = false, features = [
	"plaintext"
] }
libp2p-swarm-test = { workspace = true }
network = { package = "ave-network", path = ".", features = ["test"]}
serial_test = { workspace = true }

[features]
test =[]

[lib]
bench = false
